# boq-core

./: .gitignore  .pre-commit-config.yaml  .rules.ts  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  PLANS.md  README.md  RULES.md  book.toml  prek.toml
.ai/: matrix.json
.omc/: README.md
docs/: branch-protection.md  coverage-policy.md  testing-strategy.md  ultraqa-report.md
gaeb/: README.md  manifest.toml
scripts/: archgate.sh  validate-rules.sh
src/: catalogo.rs  checksum.rs  csi_masterformat.rs  din276.rs  dqe.rs  error.rs  format.rs  gaeb2000.rs  gaeb90.rs  lib.rs  model.rs  nlsfb.rs  prezzario.rs  service_contract.rs  service_export_boundary.rs  service_market_overlays.rs  service_obra_import.rs  service_support_manifest.rs  sinapi.rs  spreadsheet.rs  stabu.rs  support.rs  uniclass.rs  x31.rs  x89.rs
tests/: ava_criteria.rs  bau_roundtrip.rs  bvbs_ava_integration.rs  catalogo_cuadro.rs  csi_masterformat_overlay.rs  din276_classification.rs  docs_mvp.rs  dqe_quantity.rs  fixtures_manifest.rs  gaeb2000_compatibility.rs  gaeb90_adapter_promotion.rs  gaeb90_encoding.rs  gaeb90_integration.rs  gaeb_xml34_beta.rs  gaeb_xml_compatibility.rs  gaebxmlchecker_ava.rs  handel_boundary.rs  kosten_kalkulation_boundary.rs  large_boq_benchmarks.rs  malformed_input_properties.rs  multi_standard_model.rs  nlsfb_overlay.rs  prezzario_computo.rs  public_api_docs.rs  release_automation.rs  service_contract.rs  service_export_boundary.rs  service_market_overlays.rs  service_obra_import.rs  service_support_manifest.rs  sinapi_bdi.rs  (+12 more)
(+313 files in other folders)
