[package]
name = "boq-core"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Loss-aware GAEB parser core and Obra-compatible BoQ adapter"
license = "MIT OR Apache-2.0"
repository = "https://github.com/r3dlex/boq-core"
readme = "README.md"

[lib]
name = "boq_core"
path = "src/lib.rs"

[dependencies]
encoding_rs = "0.8.35"
quick-xml = { version = "0.40.1", features = ["serialize"] }
rust_decimal = { version = "1.39", features = ["serde-with-str"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.9"
zip = { version = "6.0", default-features = false, features = ["deflate"] }

[[bin]]
name = "xtask"
path = "src/bin/xtask.rs"

[dev-dependencies]

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
